bug!!!!
 File "/home/iv/project/virtshop/lib/python3.7/site-packages/celery/backends/redis.py", line 22
    from . import async, base
                      ^
SyntaxError: invalid syntax

------------------------

redis.exceptions.ConnectionError: Error while reading from socket: ('Connection closed by server.',)

-----------------------

MultipleObjectsReturned 

-----------------------

Internal Server Error: /media/products/2019/02/04/CW-ES500BK01.jpg/
Traceback (most recent call last):
  File "/home/iv/project/virtshop/lib/python3.7/site-packages/django/core/handlers/exception.py", line 34, in inner
    response = get_response(request)
  File "/home/iv/project/virtshop/lib/python3.7/site-packages/django/core/handlers/base.py", line 126, in _get_response
    response = self.process_exception_by_middleware(e, request)
  File "/home/iv/project/virtshop/lib/python3.7/site-packages/django/core/handlers/base.py", line 124, in _get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
  File "/home/iv/project/virtshop/orten/shop/views.py", line 33, in list_category
    parent = category_all.get(parent=parent, slug = slug)
  File "/home/iv/project/virtshop/lib/python3.7/site-packages/django/db/models/query.py", line 399, in get
    self.model._meta.object_name
shop.models.Category.DoesNotExist: Category matching query does not exist.
-----------------------
